--- a/lab/Frota1/pom.xml
+++ b/lab/Frota1/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>br.lpm</groupId>
-    <artifactId>frota</artifactId>
+    <artifactId>frota1</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -13,18 +13,4 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
-
-
-    <dependencies>
-    
-
-<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
-<dependency>
-    <groupId>org.junit.jupiter</groupId>
-    <artifactId>junit-jupiter-api</artifactId>
-    <version>5.11.0</version>
-    <scope>test</scope>
-</dependency>
-
-    </dependencies>
 </project>
